RG-1830 compensation to fix vertical align of select in button mode

--- a/components/select/select.css
+++ b/components/select/select.css
@@ -144,6 +144,7 @@
   width: 100%;
 
   text-align: left;
+  vertical-align: calc(0 - unit);
 }
 
 .buttonValueOpen {
